src/test/ui/macros/meta-item-absolute-path.stderr
error[E0433]: failed to resolve: maybe a missing `extern crate Absolute;`?
  --> $DIR/meta-item-absolute-path.rs:1:12
   |
LL | #[derive(::Absolute)]
   |            ^^^^^^^^ maybe a missing `extern crate Absolute;`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
